2000-05-12  George Staikos <staikos@0wned.org>

        * Added an optional column for message size
        * Created a context menu item for "Save As"
        * Fixed various typos
        * Created welcome message on inbox creation

2000-03-25  Sven Radej <radej@kde.org>

        * Removed old signal-driven "IPC" and introduced DCOP interface
          kmailIface.h gets installed in include directory
        * new class KMKernel, holds all previously static objects
          (to access them, instead of "yourObject->something()" use
          "kmkernel->yourObject()->something()"

2000-02-28  Mario Weilguni <mario@weilguni.net>

	* Corrected wrong shortcut in menu "File/&Filter"
	* Added mini-icon to several subwindows of kmail
	* Removed those ugly password dialogs with some
	  more modern and style one.

2000-02-02  George Staikos <staikos@0wned.org> (KMail-1.1.35)
	Mail Sending
	* External editor support
	* Confirm before send
	* Attach custom mime headers

	POP3
	* Settings entry for the POP3 timer

	Security
	* Changed tpmnam to mkstemp

	General
	* New mail received notification
	* Sigfile editor

2000-02-02  Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>
        Settings 
        * Ported createPushButton, createLabeledEntry and addLabeledWidget
          from char* to QString&. It was causing problems for passing
          already internationalized strings. In cPB i18n() was unnecessarily
          called for the second time.

1999-12-15  Don Sanders  <sanders@kde.org> (KMail-1.1.32)

        General
        * Cache number of unread messages
        * Added auto synchronization logic for correcting count of unread 
	  messages.
        * Added support for customizing colors in all three panes. (Currently 
	  have to restart kmail for this to take effect due to HTML widget 
	  renovations).
        * Added support for customizing fonts and font sizes in all three 
	  panes. (Currently have to restart kmail for this to take effect due 