@@ -1,3 +1,7 @@
+2000-05-14  George Staikos <staikos@0wned.org>
+
+        * Forward now forwards ALL headers if ALL headers are set
+
 2000-05-12  George Staikos <staikos@0wned.org>
 
         * Added an optional column for message size
